--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
       "no-console": "off",
       "no-param-reassign": [
         "error",
-        { "props": false }
+        {
+          "props": false
+        }
       ],
       "quotes": [
         "error",
